toolchain/internal/core/analysis/testdata/errors/naming/enum_annotation_not_camel.vdl
// @expect: E102

@BadAnn
enum Status {
  Active
}
